# PLR2

./: .gitignore  .gitmodules  README.md  environment.yml  environment_track.yml  hparams.yaml
labeling/: CMakeLists.txt
labeling/src/: landmarks.h  main.cpp
lib/: keypoint_helper.py  layers.py  loss.py  loss_refiner.py  mean_shift.py  meanshift_pytorch.py  motion-network.py  motion_loss.py  motion_network.py  network.py  pspnet.py
lib/knn/: __init__.py
scripts/: Compare_Experiment_Results.ipynb  Untitled.ipynb  create_cad_model_renderings-checkpoint.ipynb  create_cad_model_renderings.ipynb  debug_DeepIM.ipynb  debug_notebook.ipynb  experiment2df.py  gpu_rendering.py  viewpoint_manager-checkpoint.ipynb  viewpoint_manager_load_all.ipynb
src/deep_im/: __init__.py  deepim.py  flownet.py  images_to_hdf5.py  knn_test.py  loss_add.py  re_quat.py  renderer_ycb.py  viewpoint_manager.py
src/estimation/: __init__.py  errors.py  filter.py  main.py  motion.py  state.py
src/helper/: __init__.py  analysis.py  bounding_box.py  get_delta_t_in_image_space.py  helper.py  plotting.py  postprocess.py
src/loaders_v2/: __init__.py  backend.py  configloader.py  dataset_generic.py  dataset_laval.py  dataset_ycb.py
src/rotations/: __init__.py  compose_quat.py
src/visu/: __init__.py  helper_functions.py  visualizer.py
test/: __init__.py  test_keypoint_helper.py  test_layers.py  test_loss.py
tools/: __init__.py  debug.py  eval_linemod.py  eval_ycb.py  lightning.py  lightning_DeepIM.py  train.py
yaml/env/: env_natrix_jonas.yml
yaml/exp/: exp_load_and_fit.yml  exp_ws.yml  (+3 more)
(+12 files in other folders)
